--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -1,1 +1,6 @@
-spring.application.name=demo
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/springboot?user=root
+spring.datasource.username=root
+spring.datasource.password=12345678
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
